Updated nbk-update to get the kernel and read ini file

--- a/nbkupdate.ini
+++ b/nbkupdate.ini
@@ -2,4 +2,8 @@
 nyftp = http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 nycdn = http://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 urltail = binary/kernel/
+
+[default]
 default-url = ${url:nyftp}
+default-src = current
+default-tgt = occurent
