Added nbkhelper module

--- a/nbkupdate.ini
+++ b/nbkupdate.ini
@@ -4,6 +4,6 @@ nycdn = http://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 urltail = binary/kernel/
 
 [default]
-default-url = ${url:nyftp}
+default-url = http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 default-src = current
 default-tgt = occurent
