--- a/nbkupdate.ini
+++ b/nbkupdate.ini
@@ -1,9 +1,17 @@
-[url]
+[urls]
 nyftp = http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 nycdn = http://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 urltail = binary/kernel/
 
-[default]
+[defaults]
 default-url = http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/latest/
 default-src = current
 default-tgt = occurent
+default-download = /tmp
+default-kernel = netbsd-GENERIC.gz
+
+[kerns]
+generic = kern-GENERIC.tar.xz
+kaslr = kern-GENERIC_KASLR.tar.xz
+xen3-dom0 = kern-XEN3_DOM0.tar.xz
+xen3-domu kern-XEN3_DOMU.tar.xz
